--- a/project-ex03/package.json
+++ b/project-ex03/package.json
@@ -2,8 +2,8 @@
   "name": "project-ex02",
   "version": "1.0.0",
   "description": "",
-  "main": "httpd.js",
-  "type":"module",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
