--- a/project-ex13/package.json
+++ b/project-ex13/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "project-ex09",
+  "name": "project-ex11",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
     "build": "npx webpack",
     "start": "npx webpack-dev-server"
