--- a/project-ex09/package.json
+++ b/project-ex09/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-ex13",
+  "name": "project-ex09",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,10 +15,12 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
